--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,6 +15,11 @@
   <body>
     <div class="container">
       <h1 class="bg-primary text-center text-white mt-3">Hello World!</h1>
+      <p class="font">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam facere
+        animi consequuntur recusandae delectus quasi error rem vero vitae
+        aspernatur.
+      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
